syntax = "proto3";

package github.com.Nixonxp.discord.user.api.v1;
option go_package = "api/user";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (UserDataResponse) {}
  rpc GetUserByLoginAndPassword(GetUserByLoginAndPasswordRequest) returns (UserDataResponse) {}
}

message CreateUserRequest {
  string login = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message UserDataResponse {
  string id = 1;
  string login = 2;
  string name = 3;
  string email = 4;
  string avatar_photo_url = 6;
}

message GetUserByLoginAndPasswordRequest {
  string login = 1;
  string password = 2;
}
